[package]
name = "woot-cli"
description = "An unofficial command line client for Wooting keyboards."
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Atte/woot"
keywords = ["cli", "hid"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "woot"
path = "src/main.rs"

[dependencies]
bytes = "1.1"
color-eyre = "0.6"
env_logger = "0.9"
hidapi = "1.4"
log = "0.4"
num_enum = "0.5"

[dependencies.clap]
version = "3.2"
features = ["derive"]