[package]
name = "woot-cli"
description = "An unofficial command line client for Wooting keyboards."
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Atte/woot"
keywords = ["cli", "hid"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "woot"
path = "src/main.rs"

[dependencies]
bytes = "1.1"
color-eyre = "0.6"
env_logger = "0.9"
hidapi = "1.4"
log = "0.4"
num_enum = "0.5"

[dependencies.clap]
version = "3.2"
features = ["derive"]

[dependencies.sysinfo]
version = "0.24"
optional = true

[dependencies.active-win-pos-rs]
version = "0.5"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.toml]
version = "0.5"
optional = true

[dependencies.cfg-if]
version = "1.0"
optional = true

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
optional = true

[features]
default = ["autoswitch"]
autoswitch = ["dep:sysinfo", "dep:active-win-pos-rs", "dep:serde", "dep:toml", "dep:cfg-if", "dep:winapi"]
